# parallelClustering

./: CMakeLists.txt  LICENSE  Makefile  README.md  blobloblok.eps  blue.eps  burn.eps  common.h  em-reserva.c  em.c  em.h  held.eps  isthis.eps  kmeans  kmeans-gen.h  kmeans-parallel.c  kmeans.c  kmeans.h  kmeans.or.c  kmeanso  kmeansp  made.txt  main.c  main.py  or.x  par.eps  parallel.csv  parallelClustering  seq.eps  seq.grp.txt  serial.csv  test1  test2  test3  true.eps  un.txt
